--- a/BkBuild/bksetup.cfg
+++ b/BkBuild/bksetup.cfg
@@ -1,18 +1,18 @@
-; Конфигурационный файл для утилиты FJ
-; Описывает драйвера, которые необходимо прикрепить к инсталлеру
-; При запуске инсталлер определяет разрядность ОС и устанавливает соответствующий драйвер
+;Config file for the FJ
+;Describes the device driver that you want to attach to install
+;When you run the installer determines the bit depth of the operating system and installs the appropriate driver
 
-
-; Начальный загрузчик
+;The bootstrapper
 BIN: Release\vbr.com
 
-; Драйвер для 32х-битной ОС
+;Drivers for 32-bit OS
 DRV: ..\bin\Release\i386\kloader.sys
 
-; Драйвер для 64х-битной ОС
+;Drivers for 64-bit OS
 ;DRV: ..\bin\Release\amd64\kloader.sys
 
-; 32х-битная DLL
+;32-bit DLL
 DLL: BootkitRunBot.dll
-; Список процессов куда инжектить 32х битную DLL
+
+;List of processes where to inject 32-bit DLL
 explorer.exe
